# HCMUS-News-Crawler

./: .gitignore  GITHUB_ACTIONS_REFERENCE.md  NEWS-APCS.md  NEWS-CLC.md  NEWS-STANDARD.md  README.md  crawl.py  pyproject.toml  requirements.txt
.github/workflows/: auto-crawl.yml  intensive-crawl.yml  manual-crawl.yml
scripts/: validate-workflows.sh
src/hcmus_crawler/: __init__.py  __main__.py  config.py  crawler.py  models.py  utils.py
