[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hcmus-news-crawler"
version = "2.0.0"
description = "Automated news aggregation system for HCMUS websites"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "tranlynhathao", email = "haotran04022005@gmail.com" }]
maintainers = [{ name = "tranlynhathao", email = "haotran04022005@gmail.com" }]
keywords = ["crawler", "news", "hcmus", "scraping", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Text Processing :: Markup :: HTML",
]

dependencies = [
  "beautifulsoup4>=4.12.0,<5.0.0",
  "requests>=2.31.0,<3.0.0",
  "lxml>=4.9.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0,<8.0.0",
  "pytest-cov>=4.1.0,<5.0.0",
  "black>=23.0.0,<24.0.0",
  "flake8>=6.0.0,<7.0.0",
  "mypy>=1.5.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/tranlynhathao/hcmus-news-crawler"
Repository = "https://github.com/tranlynhathao/hcmus-news-crawler.git"
Issues = "https://github.com/tranlynhathao/hcmus-news-crawler/issues"
Documentation = "https://github.com/tranlynhathao/hcmus-news-crawler/blob/main/docs/API.md"

[project.scripts]
hcmus-crawler = "hcmus_crawler.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hcmus_crawler = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "network: marks tests that require network access",
]

[tool.coverage.run]
source = ["hcmus_crawler"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["bs4.*", "lxml.*"]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv", ".eggs", "*.egg"]
